<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/guess_list"
        android:entryValues="@array/guess_list"
        android:key="pref_number_of_choices"
        android:title="@string/number_of_choices"
        android:summary="@string/number_of_choices_description"
        android:permission="true"
        android:defaultValue="4" />

    <MultiSelectListPreference
        android:entries="@array/regions_list_for_settings"
        android:entryValues="@array/region_list"
        android:key="pref_region_to_include"
        android:title="@string/world_regions"
        android:summary="@string/world_regions_description"
        android:persistent="true"
        android:defaultValue="@array/region_list" />

</PreferenceScreen>